# reloop-python

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
reloop/: __init__.py  _parameters.py  _resource.py  _resource_factory.py  client.py  errors.py  reloop.py
reloop/models/: api_key.py
reloop/services/: __init__.py  api_key.py  api_keys.py
reloop/services/contacts/: __init__.py  channels.py
reloop_email/: __init__.py  _http_client.py  _parameters.py  _resource.py  _resource_factory.py  client.py  reloop.py
reloop_email/services/: __init__.py  domain.py  mail.py
reloop_email/services/contacts/: groups.py
tests/: test_api_keys.py  test_domain.py  test_mail.py
