[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reloop-email"
version = "0.2.0"
description = "Reloop Python SDK"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Reloop Labs" }]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://reloop.sh"
Repository = "https://github.com/reloop-labs/reloop-python"

[tool.hatch.build.targets.wheel]
packages = ["reloop_email"]
